# vocal-separator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  VocalSeparator.spec  app_gui.py  batch.py  build_app.sh  build_icon.sh  create_app.sh  droplet.py  pyproject.toml  requirements-dev.txt  run_gui.py  separator.py  setup.py
.github/workflows/: ci.yml
docs/: app.js  index.html  style.css
scripts/: build_app.sh  build_icon.sh  create_app.sh
src/audioshake_separator/: __init__.py  app_gui.py  batch.py  droplet.py  separator.py
src/vocal_separator/: __init__.py  app_gui.py  batch.py  droplet.py  separator.py
tests/: test_batch.py  test_separator.py
